--- a/HW_36/HW_36.md
+++ b/HW_36/HW_36.md
@@ -14,6 +14,11 @@
 - image_family и image_project - семейство и проект образа виртуальной машины. Использовать блок google_compute_image для получения URI образа.
 
 Создать Firewall правило, которое позволяет доступ к любому порту виртуальной машине с вашего публичного IP адреса, который определяется с помощью http data блока.
+
+``` bash
+git clone git@github.com:tms-dos21-onl/anzhalika-tseliak.git
+``` 
+
 2. Изменить шаблон таким образом, чтобы он принимал на вход массив availability zones zones и поправить конфигурацию соответствующе. Т.е. теперь, если enable_public_ip установлена в true, то создаётся не один, а много публичных IP адресов. Использовать аттрибут for_each.
 [text](Pic/1.txt)
 3. Добавить задержку перед созданием каждой VM с помощью ресурса time_sleep.
