Completing or HW_35.md

--- a/HW_35/HW_35.md
+++ b/HW_35/HW_35.md
@@ -6,13 +6,148 @@
 Дедлайн: 22/07/2024
 
 1. Установить Terraform.
-root@CCTV-PC:/home/dumpy/dos21/Alex_Horskiy/HW_35# terraform version
+
+'''bash
+$ sudo terraform version
+'''
+
+output
 Terraform v1.8.3
 on linux_amd64
 
 2. Написать шаблон для создания виртуальной машины в облаке.
-Explication: /home/dumpy/dos21/Alex_Horskiy/HW_35/main.tf
 
+File main.tf
+'''bash
+provider "google" {
+  project = var.project_id
+  region  = var.region
+}
+
+# Create a networking
+resource "google_compute_network" "vpc_network" {
+  project                 = var.project_id
+  name                    = var.network_name
+  auto_create_subnetworks = true
+}
+
+# Creating subnets through a loop
+resource "google_compute_subnetwork" "subnetworks" {
+  count = length(var.subnets)
+
+  name          = element(var.subnets, count.index).name
+  ip_cidr_range = element(var.subnets, count.index).ip_cidr_range
+  region        = var.region
+  network       = google_compute_network.vpc_network.name
+}
+
+# Create instans though a loop
+resource "google_compute_instance" "vm_instances" {
+  count        = length(var.zones)
+  name         = "vm-instance-${count.index + 1}"
+  machine_type = var.machine_type
+  zone         = element(var.zones, count.index)
+
+  boot_disk {
+    initialize_params {
+      image = var.image
+    }
+  }
+
+  network_interface {
+    network    = google_compute_network.vpc_network.name
+    subnetwork = element(google_compute_subnetwork.subnetworks[*].name, count.index)
+  }
+
+  metadata_startup_script = <<-EOT
+    #!/bin/bash
+    sudo apt-get update
+    sudo apt-get install -y apache2
+    sudo systemctl start apache2
+    sudo systemctl enable apache2
+  EOT
+}
+'''
+File veriables.tf
+'''bash
+variable "project_id" {
+  description = "GCP Project ID"
+  type        = string
+}
+
+variable "region" {
+  description = "GCP Region"
+  type        = string
+  default     = "us-central1"
+}
+
+variable "network_name" {
+  description = "Name of the VPC network"
+  type        = string
+  default     = "terraform-network"
+}
+
+variable "subnets" {
+  description = "List of subnets to create"
+  type = list(object({
+    name          = string
+    ip_cidr_range = string
+  }))
+}
+
+variable "zones" {
+  description = "List of zones for the instances"
+  type        = list(string)
+  default     = ["us-central1-a", "us-central1-b", "us-central1-c", "us-central1-f"]
+}
+
+variable "machine_type" {
+  description = "Machine type for the instances"
+  type        = string
+  default     = "e2-medium"
+}
+
+variable "image" {
+  description = "Disk image for the instances"
+  type        = string
+  default     = "debian-cloud/debian-11"
+}
+'''
+File terraform.tfvars
+'''bash
+project_id   = "my-project-dos21"
+region       = "us-central1"
+network_name = "terraform-network"
+
+subnets = [
+  {
+    name          = "subnetwork-a"
+    ip_cidr_range = "10.0.1.0/24"
+  },
+  {
+    name          = "subnetwork-b"
+    ip_cidr_range = "10.0.2.0/24"
+  },
+  {
+    name          = "subnetwork-c"
+    ip_cidr_range = "10.0.3.0/24"
+  }
+]
+'''
+File output.tf
+'''bash
+output "network_name" {
+  value = google_compute_network.vpc_network.name
+}
+
+output "subnetworks" {
+  value = google_compute_subnetwork.subnetworks[*].name
+}
+
+output "instance_names" {
+  value = google_compute_instance.vm_instances[*].name
+}
+'''
 3. Познакомиться с командами:
 - terraform init     - Ok
 root@CCTV-PC:/home/dumpy/dos21/Alex_Horskiy/HW_35# terraform init
