--- a/HW_35/HW_35.md
+++ b/HW_35/HW_35.md
@@ -7,9 +7,9 @@
 
 1. Установить Terraform.
 
-'''bash
+```bash
 $ sudo terraform version
-'''
+```
 
 output
 Terraform v1.8.3
@@ -18,7 +18,7 @@ on linux_amd64
 2. Написать шаблон для создания виртуальной машины в облаке.
 
 File main.tf
-'''bash
+```bash
 provider "google" {
   project = var.project_id
   region  = var.region
@@ -67,9 +67,9 @@ resource "google_compute_instance" "vm_instances" {
     sudo systemctl enable apache2
   EOT
 }
-'''
+```
 File veriables.tf
-'''bash
+```bash
 variable "project_id" {
   description = "GCP Project ID"
   type        = string
@@ -112,9 +112,9 @@ variable "image" {
   type        = string
   default     = "debian-cloud/debian-11"
 }
-'''
+```
 File terraform.tfvars
-'''bash
+```bash
 project_id   = "my-project-dos21"
 region       = "us-central1"
 network_name = "terraform-network"
@@ -133,9 +133,9 @@ subnets = [
     ip_cidr_range = "10.0.3.0/24"
   }
 ]
-'''
+```
 File output.tf
-'''bash
+```bash
 output "network_name" {
   value = google_compute_network.vpc_network.name
 }
@@ -147,7 +147,7 @@ output "subnetworks" {
 output "instance_names" {
   value = google_compute_instance.vm_instances[*].name
 }
-'''
+```
 3. Познакомиться с командами:
 - terraform init     - Ok
 root@CCTV-PC:/home/dumpy/dos21/Alex_Horskiy/HW_35# terraform init
