Completed file HW_35.md

--- a/HW_36/HW_36.md
+++ b/HW_36/HW_36.md
@@ -16,7 +16,26 @@
 - image_family и image_project - семейство и проект образа виртуальной машины. Использовать блок google_compute_image для получения URI образа.
 
 Создать Firewall правило, которое позволяет доступ к любому порту виртуальной машине с вашего публичного IP адреса, который определяется с помощью http data блока.
+File main.tf
+```bash
+1
+```
+File veriables.tf
+```bash
+2
+```
+File terraform.tfvars
+```bash
+3
+```
+File output.tf
+```bash
+4
+ 
 2. Изменить шаблон таким образом, чтобы он принимал на вход массив availability zones zones и поправить конфигурацию соответствующе. Т.е. теперь, если enable_public_ip установлена в true, то создаётся не один, а много публичных IP адресов. Использовать аттрибут for_each.
+
 3. Добавить задержку перед созданием каждой VM с помощью ресурса time_sleep.
+
 4. Добавить output переменную ip_addresses, которая будет содержать список перечисленных через запятую созданных публичных IP адресов для виртуальных машин.
+
 5. Используя local-exec provisioner в null_resource выполнить stop всех созданных виртуальных машин с помощью утилиты gcloud.
