--- a/HW_36/HW_36.md
+++ b/HW_36/HW_36.md
@@ -31,7 +31,17 @@ File terraform.tfvars
 File output.tf
 ```bash
 4
- 
+```
+Check work cod 
+```bash
+sudo terraform init
+ok
+sudo terraform plan tfplan
+ok
+sudo terraform apply -auto-approve tfplan
+ok
+```
+
 2. Изменить шаблон таким образом, чтобы он принимал на вход массив availability zones zones и поправить конфигурацию соответствующе. Т.е. теперь, если enable_public_ip установлена в true, то создаётся не один, а много публичных IP адресов. Использовать аттрибут for_each.
 
 3. Добавить задержку перед созданием каждой VM с помощью ресурса time_sleep.
