--- a/HW_36/HW_36.md
+++ b/HW_36/HW_36.md
@@ -1,8 +1,8 @@
 # Platform     - {WSL}
 # Place        - {Work+Home}
 # Mood         - {Ok-}
-# Undestanding - {15%}
-# In the seat  - {4 hour}
+# Undestanding - {20%}
+# In the seat  - {6 hour}
 
 Дедлайн: 24/07/2024
 
@@ -18,34 +18,196 @@
 Создать Firewall правило, которое позволяет доступ к любому порту виртуальной машине с вашего публичного IP адреса, который определяется с помощью http data блока.
 File main.tf
 ```bash
-1
+terraform {
+  required_providers {
+    google = {
+      source  = "hashicorp/google"
+      version = "~> 3.50.0"
+    }
+    time = {
+      source  = "hashicorp/time"
+      version = "~> 0.7.0"
+    }
+  }
+}
+
+provider "google" {
+  project = "my-project-dos21"
+  region  = "your-gcp-region"
+}
+
+data "google_compute_image" "vm_image" {
+  family  = var.image_family
+  project = var.image_project
+}
+
+data "http" "my_ip" {
+  url = "http://ifconfig.me/ip"
+}
+
+module "vm_instances" {
+  source = "./modules/instance_with_delay"
+
+  for_each = toset(var.zone)
+
+  zone           = each.key
+  machine_type   = var.machine_type
+  image          = data.google_compute_image.vm_image.self_link
+  enable_public_ip = var.enable_public_ip
+  delay          = "20s"
+}
+
 ```
-File veriables.tf
+Допилил firewall - File veriables.tf
 ```bash
-2
+resource "google_compute_firewall" "allow_my_ip" {
+  name    = "allow-my-ip"
+  network = "default"
+
+  allow {
+    protocol = "tcp"
+    ports    = ["0-65535"]
+  }
+  # source_ranges = [chomp(data.http.my_ip.body)]
+  target_tags   = ["allow-my-ip"]
+}
 ```
 File terraform.tfvars
 ```bash
-3
+machine_type     = "n1-standard-1"
+zone             = ["us-central1-a", "us-central1-b", "us-central1-c"]
+enable_public_ip = true
+image_family     = "debian-11"
+image_project    = "debian-cloud"
+project_id       = "my-project-dos21"
+region           = "us-central1"
 ```
 File output.tf
 ```bash
-4
+output "instance_names" {
+  value = [for vm in module.vm_instances : vm.instance_name]
+}
+
+output "ip_addresses" {
+  value = join(", ", [for vm in module.vm_instances : vm.nat_ip])
+}
 ```
 Check work cod 
 ```bash
 sudo terraform init
 ok
-sudo terraform plan tfplan
+sudo terraform plan 
 ok
-sudo terraform apply -auto-approve tfplan
+sudo terraform apply -auto-approve 
 ok
 ```
 
 2. Изменить шаблон таким образом, чтобы он принимал на вход массив availability zones zones и поправить конфигурацию соответствующе. Т.е. теперь, если enable_public_ip установлена в true, то создаётся не один, а много публичных IP адресов. Использовать аттрибут for_each.
 
+```bash
+module "vm_instances" {
+  source = "./modules/instance_with_delay"
+
+  for_each = toset(var.zone)
+
+  zone           = each.key
+  machine_type   = var.machine_type
+  image          = data.google_compute_image.vm_image.self_link
+  enable_public_ip = var.enable_public_ip
+  delay          = "20s"
+}
+```
+
 3. Добавить задержку перед созданием каждой VM с помощью ресурса time_sleep.
+
+Создал модуль instans_with_delay/main.tf, output.tf, variables.tf
+
+```bash
+resource "time_sleep" "instance_delay" {
+  create_duration = var.delay
+}
+
+resource "google_compute_instance" "vm_instance" {
+  name         = "vm-instance-${var.zone}"
+  machine_type = var.machine_type
+  zone         = var.zone
+
+  boot_disk {
+    initialize_params {
+      image = var.image
+    }
+  }
+
+  network_interface {
+    network = "default"
+    dynamic "access_config" {
+      for_each = var.enable_public_ip ? [1] : []
+      content {
+        // Leave blank to get a dynamically assigned IP address
+      }
+    }
+  }
+
+  tags = ["allow-my-ip"]
+
+  depends_on = [
+    time_sleep.instance_delay
+  ]
+}
+```
 
 4. Добавить output переменную ip_addresses, которая будет содержать список перечисленных через запятую созданных публичных IP адресов для виртуальных машин.
 
+```bash
+output "instance_names" {
+  value = [for vm in module.vm_instances : vm.instance_name]
+}
+
+output "ip_addresses" {
+  value = join(", ", [for vm in module.vm_instances : vm.nat_ip])
+}
+```
+Выводит список инстансов и их IP через запятую.
+
+Outputs:
+
+instance_names = [
+  "vm-instance-us-central1-a",
+  "vm-instance-us-central1-b",
+  "vm-instance-us-central1-c",
+]
+ip_addresses = "34.41.99.56, 34.135.49.24, 35.226.255.103"
+
 5. Используя local-exec provisioner в null_resource выполнить stop всех созданных виртуальных машин с помощью утилиты gcloud.
+
+```bash
+#!/bin/bash
+
+# Determine the list of zones
+zones=("us-central1-a", "us-central1-b", "us-central1-c")  # My zone
+
+# Loop to stop VM in all zone
+for zone in "${zones[@]}"
+do
+  echo "Stopping instances in zone: $zone"
+  gcloud compute instances stop $(gcloud compute instances list --format="value(name)" --filter="zone:$zone") --zone=$zone --quiet
+done
+```
+Можно попробовать запилить в main.tf, но не пробовал.
+
+```bash
+
+resource "null_resource" "create_stop_script" {
+  provisioner "local-exec" {
+    command = <<EOT
+      echo '#!/bin/bash' > stop_vm_all_zone.sh
+      zones=(${join(" ", var.zones)})
+      for zone in "${zones[@]}"; do
+        echo "Stopping instances in zone: \$zone"
+        gcloud compute instances stop \$(gcloud compute instances list --format="value(name)" --filter="zone:\$zone") --zone=\$zone --quiet
+      done
+      chmod +x stop_vms.sh
+    EOT
+  }
+
+```
