Added file content Variables.tf to HW_36.md

--- a/HW_36/HW_36.md
+++ b/HW_36/HW_36.md
@@ -58,7 +58,7 @@ module "vm_instances" {
 }
 
 ```
-Допилил firewall - File veriables.tf
+Допилил firewall
 ```bash
 resource "google_compute_firewall" "allow_my_ip" {
   name    = "allow-my-ip"
@@ -72,6 +72,7 @@ resource "google_compute_firewall" "allow_my_ip" {
   target_tags   = ["allow-my-ip"]
 }
 ```
+File veriables.tf
 ```Bash
 variable "machine_type" {
   description = "Type/size of virtual machine"
