--- a/HW_36/HW_36.md
+++ b/HW_36/HW_36.md
@@ -6,9 +6,6 @@
 
 Дедлайн: 24/07/2024
 
-
-
-
 1. Написать шаблон для создания виртуальной машины, который использует удаленный gcs backend и принимает следующие переменные:
 - machine_type - тип/размер виртуальной машины
 - zone - название availability zone
@@ -198,6 +195,45 @@ resource "google_compute_instance" "vm_instance" {
   depends_on = [
     time_sleep.instance_delay
   ]
+}
+```
+File veriables.tf
+```bash
+variable "zone" {
+  description = "The zone to deploy the instance in"
+  type        = string
+}
+
+variable "machine_type" {
+  description = "The machine type to use for the instance"
+  type        = string
+}
+
+variable "image" {
+  description = "The image to use for the instance"
+  type        = string
+}
+
+variable "enable_public_ip" {
+  description = "Whether to enable public IP"
+  type        = bool
+}
+
+variable "delay" {
+  description = "The delay duration before creating the instance"
+  type        = string
+  default     = "20s"
+}
+
+```
+File output.tf
+```bash
+output "instance_names" {
+  value = [for vm in module.vm_instances : vm.instance_name]
+}
+
+output "ip_addresses" {
+  value = join(", ", [for vm in module.vm_instances : vm.nat_ip])
 }
 ```
 
