Start job HW_38

--- a/HW_38/HW_38.md
+++ b/HW_38/HW_38.md
@@ -17,3 +17,24 @@
 (**) Настроить Cloud NAT для доступа в Интернет
 
 ** не обязательны к выполнению. Задачи на интерес
+
+
+Project
+
+HW_38/
+├── main.tf
+├── outputs.tf
+├── variables.tf
+├── modules/
+│   ├── clinic_portal/
+│   │   ├── main.tf
+│   │   ├── variables.tf
+│   │   └── outputs.tf
+│   └── patient_portal/
+│       ├── main.tf
+│       ├── variables.tf
+│       └── outputs.tf
+|
+|__ HW_38.md
+|
+└── script.sh
