HW_38 in underway

--- a/HW_38/HW_38.md
+++ b/HW_38/HW_38.md
@@ -1,3 +1,10 @@
+# Platform     - {WSL}
+# Place        - {Work+Home}
+# Mood         - {Ok-}
+# Undestanding - {-15%}
+# In the seat  - {4 hour}
+
+
 Дедлайн: 31/07/2024
 
 Создать Terraform проект для конфигурации инфраструктуры для проекта Clinic v1 по следующему шаблону:
