--- a/HW_37/HW_37.md
+++ b/HW_37/HW_37.md
@@ -1,50 +1,141 @@
-<<<<<<< HEAD
-Установка tfmigrate
-Для установки tfmigrate необходимо выполнить следующие шаги:
+Миграция инфраструктуры с помощью Terraform может быть упрощена с использованием таких инструментов, как tfmigrate и tfmigrator. Эти инструменты помогают автоматизировать процесс миграции Terraform конфигураций и состояний.
 
-Установите tfmigrate с помощью go (если у вас установлен Go):
+1. Установка и настройка
+Установите Terraform:
 
-sh
+bash
 Копировать код
-go install github.com/minamijoyo/tfmigrate/cmd/tfmigrate@latest
-Или скачайте и установите исполняемый файл напрямую:
+# Download the latest version of Terraform
+wget https://releases.hashicorp.com/terraform/{version}/terraform_{version}_linux_amd64.zip
+unzip terraform_{version}_linux_amd64.zip
+sudo mv terraform /usr/local/bin/
+Установите tfmigrate:
 
-sh
+bash
 Копировать код
-wget https://github.com/minamijoyo/tfmigrate/releases/download/v0.2.8/tfmigrate_0.2.8_linux_amd64.zip
-unzip tfmigrate_0.2.8_linux_amd64.zip -d /usr/local/bin
-Использование tfmigrate
-Для использования tfmigrate для миграции ресурсов из GCP в AWS, следуйте этим шагам:
+go install github.com/minamijoyo/tfmigrate@latest
+Установите tfmigrator:
 
-Создайте конфигурационные файлы Terraform для AWS.
+bash
+Копировать код
+go install github.com/GoogleCloudPlatform/tf-migrator@latest
+2. Настройка Terraform конфигурации для GCP
+Создайте новый проект в GCP и настройте аутентификацию:
 
-Создайте файл миграции для tfmigrate:
-
-Создайте файл миграции tfmigrate.hcl, который будет описывать процесс миграции ресурсов.
+bash
+Копировать код
+gcloud init
+gcloud auth application-default login
+Настройте backend для хранения состояния в GCP (например, в Google Cloud Storage):
 
 hcl
 Копировать код
-migration "state" "gcp_to_aws" {
-  from = "terraform.tfstate"
-  to   = "aws/terraform.tfstate"
+terraform {
+  backend "gcs" {
+    bucket = "your-bucket"
+    prefix = "terraform/state"
+  }
+}
+3. Перенос Terraform конфигураций и состояний
+Перенос с tfmigrate
+Создайте миграционные файлы для tfmigrate:
+
+hcl
+Копировать код
+migration "state" "example" {
+  from = "aws.tfstate"
+  to   = "gcp.tfstate"
 
   actions = [
-    "mv google_compute_instance.default aws_instance.default",
-    "mv google_compute_network.default aws_vpc.default",
-    "mv google_compute_subnetwork.default aws_subnet.default",
-    # добавьте другие ресурсы по мере необходимости
+    "mv aws_instance.example google_compute_instance.example"
   ]
 }
-Выполните миграцию:
+Запустите миграцию:
 
-Переместите файл состояния GCP в соответствующую директорию AWS и выполните команду миграции:
-
-sh
+bash
 Копировать код
-tfmigrate plan -config=tfmigrate.hcl
-tfmigrate apply -config=tfmigrate.hcl
-Дополнительные инструменты
-=======
-import *tfstate
->>>>>>> 193610bae70664095ee74e93169529adee637f6d
+tfmigrate plan -config tfmigrate.hcl
+tfmigrate apply -config tfmigrate.hcl
+Перенос с tfmigrator
+Создайте конфигурационный файл для tfmigrator:
+
+yaml
+Копировать код
+mappings:
+  - from: aws_instance
+    to: google_compute_instance
+    fields:
+      - from: ami
+        to: image
+      - from: instance_type
+        to: machine_type
+Запустите миграцию:
+
+bash
+Копировать код
+tfmigrator migrate -config tfmigrator.yaml
+Пример миграции
+Для примера, рассмотрим простую миграцию EC2 в Compute Engine.
+
+Исходная AWS конфигурация (aws_instance.tf):
+
+hcl
+Копировать код
+provider "aws" {
+  region = "us-west-2"
+}
+
+resource "aws_instance" "example" {
+  ami           = "ami-0c55b159cbfafe1f0"
+  instance_type = "t2.micro"
+}
+Новая GCP конфигурация (google_compute_instance.tf):
+
+hcl
+Копировать код
+provider "google" {
+  project = "your-project-id"
+  region  = "us-west1"
+}
+
+resource "google_compute_instance" "example" {
+  name         = "example-instance"
+  machine_type = "n1-standard-1"
+
+  boot_disk {
+    initialize_params {
+      image = "debian-cloud/debian-9"
+    }
+  }
+
+  network_interface {
+    network = "default"
+    access_config {
+      // Ephemeral IP
+    }
+  }
+}
+Конфигурация tfmigrate.hcl:
+
+hcl
+Копировать код
+migration "state" "example" {
+  from = "aws.tfstate"
+  to   = "gcp.tfstate"
+
+  actions = [
+    "mv aws_instance.example google_compute_instance.example"
+  ]
+}
+Запуск миграции:
+
+bash
+Копировать код
+tfmigrate plan -config tfmigrate.hcl
+tfmigrate apply -config tfmigrate.hcl
+Завершение миграции
+Проверка состояния: Убедитесь, что состояние в GCP соответствует ожидаемому.
+Тестирование: Запустите все тесты, чтобы убедиться, что все сервисы работают корректно.
+Удаление старых ресурсов: После успешной миграции можно удалить ресурсы в AWS.
+Использование tfmigrate и tfmigrator позволяет автоматизировать и упростить процесс миграции инфраструктуры, минимизируя риски и упрощая управление.
 
