HW_38 in progress

--- a/HW_38/HW_38.md
+++ b/HW_38/HW_38.md
@@ -26,21 +26,24 @@
 ** не обязательны к выполнению. Задачи на интерес
 
 
-Project
+Project HW_38
 
-HW_38/
-├── main.tf
-├── outputs.tf
-├── variables.tf
-├── modules/
-│   ├── clinic_portal/
-│   │   ├── main.tf
-│   │   ├── variables.tf
-│   │   └── outputs.tf
-│   └── patient_portal/
-│       ├── main.tf
-│       ├── variables.tf
-│       └── outputs.tf
+HW_38
+|
+|
+|________| clinic/
+|        ├──modules/
+|        │       ├── clinic_portal/
+|        │       │   ├── main.tf
+|        │       │   ├── variables.tf
+|        │       │   └── outputs.tf
+|        │       └── patient_portal/
+|        │           ├── main.tf
+|        │           ├── variables.tf
+|        │           └── outputs.tf
+|        ├── main.tf
+|        ├── terraform.tfvars
+|        ├── variables.tf
 |
 |__ HW_38.md
 |
