HW_38 in progress

--- a/HW_38/HW_38.md
+++ b/HW_38/HW_38.md
@@ -44,6 +44,7 @@ HW_38
 |        ├── main.tf
 |        ├── terraform.tfvars
 |        ├── variables.tf
+|        |__ output.tf
 |________| samples
 |                |__ main.tf
 |                |__ load_balanser.tf
