Start create HW_40

--- a/HW_40/HW_40.md
+++ b/HW_40/HW_40.md
@@ -1,12 +1,15 @@
 1. Прочитать 2-ю главу Kubernetes in Action и повторить приведенные там примеры.
 2. Познакомиться с Workload объектами Kubernetes (Pod, ReplicaSet, DaemonSet, Job, CronJob), а также их конфигурацией (Liveness Probe, Resources) путем запуска примеров из lecture45.
 
-1. Проверка установлен ли Docker. Если нет установим, если да, то запускаем первый контейнер.
+## Приступим )
+
+- 1. Проверка установлен ли Docker. Если нет установим, если да, то запускаем первый контейнер.
 ```bash
 docker --version
 
 doker run busybox echo "Hello Dummy!"
 ```
 ![alt text](assets/1-1.png)
-All OK
-2. Запуск
+
+    -All OK
+- 2. Запуск
