Start create HW_40

--- a/HW_40/HW_40.md
+++ b/HW_40/HW_40.md
@@ -12,4 +12,54 @@ doker run busybox echo "Hello Dummy!"
 ![alt text](assets/1-1.png)
 
 All OK
-- Запуск
+- Написал простейшее приложение app.js и Dockerfile для его запуска в контейнере.
+```bash
+FROM node:7
+ADD app.js /app.js
+ENTRYPOINT ["node", "app.js"]
+```
+```bash
+const http = require('http');
+const os = require('os');
+
+console.log("Kubia server starting...");
+var handler = function (request, response) {
+    console.log("Received request from " + request.connection.remoteAddress);
+    response.writeHead(200);
+    response.end("You've hit " + os.hostname() + "\n");
+};
+
+var www = http.createServer(handler);
+www.listen(8080);
+```
+- Создаем образ, запускаем, инспектируем и проверяем работу.
+```bash
+$ docker build -t kubia .
+$ docker images
+$ docker run --name kubia-container -p 8181:8080 -d kubia # порт 8080 занят Jenkins, использую 8181
+$ docker inspect kubia-container
+$ curl localhost:8080
+Output -> You've hit 4f09a1b88265
+```
+
+Для понимания, что процессы внутри контейнера работают в хостовой ОС
+
+```bash
+$ docker exec -it kubia-container bash
+$ ps aux # внутри контейнера
+USER         PID %CPU %MEM    VSZ   RSS TTY      STAT START   TIME COMMAND
+root           1  0.0  0.1 813608 25912 ?        Ssl  11:19   0:00 node app.js
+root          12  0.2  0.0  20252  3284 pts/0    Ss   11:31   0:00 bash
+root          18  0.0  0.0  17508  2092 pts/0    R+   11:31   0:00 ps aux
+
+$ ps aux | grep app.js # на хостовой машине
+root       16848  0.0  0.1 813608 25912 ?        Ssl  14:19   0:00 node app.js
+root       20234  0.0  0.0   4032  2128 pts/0    S+   14:33   0:00 grep --color=auto app.js
+```
+All OK
+- Остановил, удалил
+```bash
+$ docker stop kubia-container
+$ docker rm kubia-container
+```
+- 
