--- a/HW_40/HW_40.md
+++ b/HW_40/HW_40.md
@@ -1,3 +1,10 @@
+# Platform     - {WSL}
+# Place        - {Work+Home}
+# Mood         - {Gloomy}
+# Undestanding - {20%}
+
+
+
 1. Прочитать 2-ю главу Kubernetes in Action и повторить приведенные там примеры.
 2. Познакомиться с Workload объектами Kubernetes (Pod, ReplicaSet, DaemonSet, Job, CronJob), а также их конфигурацией (Liveness Probe, Resources) путем запуска примеров из lecture45.
 
@@ -62,4 +69,13 @@ All OK
 $ docker stop kubia-container
 $ docker rm kubia-container
 ```
-- 
+- Забросил образ в docker.hub поменяв tag
+```bash
+$ docker tag kubia horskiy/kubia
+$ docker push horskiy/kubia
+
+```
+- Теперь образ kubia можно запустить на любой машине
+```bash
+$ docker run -p 8080:8080 -d horskiy/kubia
+```
