--- a/HW_40/HW_40.md
+++ b/HW_40/HW_40.md
@@ -79,3 +79,81 @@ $ docker push horskiy/kubia
 ```bash
 $ docker run -p 8080:8080 -d horskiy/kubia
 ```
+- Поработаю с minicube
+- minikube and kubectl были установлены ранее этими коммандами:
+```bash
+curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
+sudo install minikube-linux-amd64 /usr/local/bin/minikube
+
+curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+
+```
+C VirtualBox не заработало. WSL взрывается.
+Буду пробовать работать с Docker driver
+
+```bash
+minikube start --driver=docker
+
+```
+На драйвере DOcker все заработало.
+
+```bash
+minikube start --driver=docker
+
+kubectl get nodes
+kubectl get pods -A
+
+Output
+
+devops@Handler:/mnt/d/Lern/dos21/Alex_Horskiy$ kubectl get nodes
+NAME       STATUS   ROLES           AGE     VERSION
+minikube   Ready    control-plane   3m42s   v1.30.0
+devops@Handler:/mnt/d/Lern/dos21/Alex_Horskiy$ kubectl get pods -A
+NAMESPACE     NAME                               READY   STATUS    RESTARTS   AGE
+kube-system   coredns-7db6d8ff4d-4mm76           1/1     Running   0          3m35s
+kube-system   coredns-7db6d8ff4d-bzlt6           1/1     Running   0          3m35s
+kube-system   etcd-minikube                      1/1     Running   0          3m50s
+kube-system   kube-apiserver-minikube            1/1     Running   0          3m49s
+kube-system   kube-controller-manager-minikube   1/1     Running   0          3m49s
+kube-system   kube-proxy-wdjww                   1/1     Running   0          3m35s
+kube-system   kube-scheduler-minikube            1/1     Running   0          3m49s
+kube-system   storage-provisioner                1/1     Running   0          3m47s
+
+kubectl cluster-info
+
+Kubernetes control plane is running at https://127.0.0.1:32771
+CoreDNS is running at https://127.0.0.1:32771/api/v1/namespaces/kube-system/services/kube-dns:dns/proxy
+```
+- Step forward. Настройка K8s в GCP
+gcloude install and runing
+
+```bash
+devops@Handler:/mnt/d/Lern/dos21/Alex_Horskiy$ gcloud --version
+Google Cloud SDK 483.0.0
+alpha 2024.06.28
+beta 2024.06.28
+bq 2.1.6
+bundled-python3-unix 3.11.8
+core 2024.06.28
+gcloud-crc32c 1.0.0
+gsutil 5.30
+minikube 1.33.1
+skaffold 2.11.1
+```
+
+```bash
+
+```
+```bash
+
+```
+```bash
+
+```
+```bash
+
+```
+```bash
+
+```
