--- a/HW_40/HW_40.md
+++ b/HW_40/HW_40.md
@@ -141,19 +141,109 @@ gsutil 5.30
 minikube 1.33.1
 skaffold 2.11.1
 ```
-
+- Создадим 2 узла в кластере
 ```bash
+gcloud container clusters create kubia --num-nodes 2 --machine-type e2-micro
+
+Output
+Default change: VPC-native is the default mode during cluster creation for versions greater than 1.21.0-gke.1500. To create advanced routes based clusters, please pass the `--no-enable-ip-alias` flag
+Note: The Kubelet readonly port (10255) is now deprecated. Please update your workloads to use the recommended alternatives. See https://cloud.google.com/kubernetes-engine/docs/how-to/disable-kubelet-readonly-port for ways to check usage and for migration instructions.
+Note: Your Pod address range (`--cluster-ipv4-cidr`) can accommodate at most 1008 node(s).
+Creating cluster kubia in us-central1-c... Cluster is being health-checked (master is healthy)...done.
+Created [https://container.googleapis.com/v1/projects/my-project-dos21/zones/us-central1-c/clusters/kubia].
+To inspect the contents of your cluster, go to: https://console.cloud.google.com/kubernetes/workload_/gcloud/us-central1-c/kubia?project=my-project-dos21
+CRITICAL: ACTION REQUIRED: gke-gcloud-auth-plugin, which is needed for continued use of kubectl, was not found or is not executable. Install gke-gcloud-auth-plugin for use with kubectl by following https://cloud.google.com/kubernetes-engine/docs/how-to/cluster-access-for-kubectl#install_plugin
+kubeconfig entry generated for kubia.
+NAME   LOCATION       MASTER_VERSION      MASTER_IP     MACHINE_TYPE  NODE_VERSION        NUM_NODES  STATUS
+kubia  us-central1-c  1.29.6-gke.1038001  23.236.58.25  e2-micro      1.29.6-gke.1038001  2          RUNNING
+```
+- Кластер создался, но с ошибкой. Не хватает плагина. Установим
+```bash
+https://cloud.google.com/sdk/docs/install-sdk#deb
 
 ```
+- Посмотрим список узлов кластера.
 ```bash
+kubectl get nodes
+
+devops@Handler:/mnt/d/Lern/dos21/Alex_Horskiy$ kubectl get nodes
+NAME                                   STATUS   ROLES    AGE   VERSION
+gke-kubia-default-pool-3527cc6c-7jl8   Ready    <none>   32m   v1.29.6-gke.1038001
+gke-kubia-default-pool-3527cc6c-jjfr   Ready    <none>   32m   v1.29.6-gke.1038001
+```
+- Можно получить дополнительные сведения 
+```bash
+kubectl describe node gke-kubia-85f6-node-0rrx
+
+Выборочно
+...
+Capacity:
+  cpu:                2
+  ephemeral-storage:  98831908Ki
+  hugepages-1Gi:      0
+  hugepages-2Mi:      0
+  memory:             993504Ki
+  pods:               110
+
+...
+Namespace                   Name                                               CPU Requests  CPU Limits  Memory Requests  Memory Limits  Age      
+  ---------                   ----                                               ------------  ----------  ---------------  -------------  ---      
+  gke-managed-cim             kube-state-metrics-0                               105m (11%)    0 (0%)      130Mi (21%)      530Mi (86%)    37m      
+  gmp-system                  gmp-operator-594b6bcdcd-bcw2j                      1m (0%)       0 (0%)      16M (2%)         2G (310%)      37m      
+  kube-system                 fluentbit-gke-n22b9                                105m (11%)    0 (0%)      230Mi (37%)      530Mi (86%)    36m      
+  kube-system                 gke-metrics-agent-qqfgr                            19m (2%)      0 (0%)      155Mi (25%)      155Mi (25%)    36m      
+  kube-system                 kube-proxy-gke-kubia-default-pool-3527cc6c-7jl8    100m (10%)    0 (0%)      0 (0%)           0 (0%)         36m      
+  kube-system                 metrics-server-v0.7.1-5564dbf674-224wm             5m (0%)       0 (0%)      50Mi (8%)        300Mi (48%)    37m      
+  kube-system                 pdcsi-node-jwww4                                   10m (1%)      0 (0%)      20Mi (3%)        100Mi (16%)    36m      
+Allocated resources:
+  (Total limits may be over 100 percent, i.e., overcommitted.)
+  Resource           Requests        Limits
+  --------           --------        ------
+  cpu                345m (36%)      0 (0%)
+  memory             614665Ki (97%)  3606885Ki (573%)
+  ephemeral-storage  0 (0%)          0 (0%)
+  hugepages-1Gi      0 (0%)          0 (0%)
+  hugepages-2Mi      0 (0%)          0 (0%)
+```
+Прикольно 
+
+- Попробуем запустить приложение в K8s
+```bash
+kubectl run kubia --image=luksa/kubia --port=8080 --generator=run/v1
+```
+- Список подов
+```bash
+kubectl get pods
+
+devops@Handler:/mnt/d/Lern/dos21/Alex_Horskiy$ kubectl get pods
+NAME    READY   STATUS    RESTARTS   AGE
+kubia   1/1     Running   0          51s
+```
+- Настроим доступ и масштабирование.
+Created object Service 
+```bash
+kubectl expose rc kubia --type=LoadBalancer --name kubia-http
+
+kubectl get services
+devops@Handler:/mnt/d/Lern/dos21/Alex_Horskiy/HW_40$ kubectl get services
+NAME         TYPE           CLUSTER-IP     EXTERNAL-IP     PORT(S)          AGE
+kubernetes   ClusterIP      34.118.224.1   <none>          443/TCP          74m
+kubia-http   LoadBalancer   34.118.239.0   34.30.159.244   8080:31787/TCP   115s
+
+
+devops@Handler:/mnt/d/Lern/dos21/Alex_Horskiy/HW_40$ curl 34.30.159.244:8080
+curl: (56) Recv failure: Connection reset by peer
+```
+Удаляем
+```bash
+kubectl delete pods --all                             # удаляем все поды
+kubectl delete services --all                         # удаляем все сервисы
+kubectl delete all --all                              # удаляем все ресурсы
+kubectl delete pods,services,deployments -l app=kubia # удаляем ресурсы по меткам
 
 ```
-```bash
 
-```
-```bash
 
-```
 ```bash
 
 ```
