HW_40 Fix my bad

--- a/HW_40/HW_40.md
+++ b/HW_40/HW_40.md
@@ -232,6 +232,8 @@ kubia-http   LoadBalancer   34.118.239.0   34.30.159.244   8080:31787/TCP   115s
 
 devops@Handler:/mnt/d/Lern/dos21/Alex_Horskiy/HW_40$ curl 34.30.159.244:8080
 curl: (56) Recv failure: Connection reset by peer
+
+Решено на занятии 
 ```
 Удаляем
 ```bash
