--- a/HW_41/HW_41.md
+++ b/HW_41/HW_41.md
@@ -1,3 +1,9 @@
+# Platform     - {WSL}
+# Place        - {Work+Home}
+# Mood         - {Ok}
+# Undestanding - {25%}
+# In the seat  - {2 hour}
+
 Дедлайн: 12/8/2024
 
 1. Познакомиться с такими объектами Kubernetes, как Services (ClusterIP, LoadBalancer) и его конфигурацией через Readiness Probe, Ingress, Volume, ConfigMap, Secret, Deployment, SatefulSet, а также политиками размещения Workloads (Scheduling) и автомасштабирования (Scaling) путем запуска примеров из lecture46 https://github.com/tms-dos21-onl/_sandbox/tree/main/lecture46.
@@ -5,3 +11,4 @@
 3. (**) Выполнить упражнения a-g из набора для подготовки к экзамену CKAD (Certified Kubernetes Application Developer). https://github.com/dgkanatsios/CKAD-exercises
 
 ** не обязательны к выполнению. Задачи на интерес
+
