--- a/HW_41/HW_41.md
+++ b/HW_41/HW_41.md
@@ -12,3 +12,9 @@
 
 ** не обязательны к выполнению. Задачи на интерес
 
+```bash
+gcloud container clusters create example-cluster --zone us-central1-a --node-locations "us-central1-a" --num-nodes "3" --machine-type "e2-medium" --disk-size "60"
+```
+```bash
+https://cloud.google.com/kubernetes-engine/docs/how-to/cluster-access-for-kubectl
+```
