--- a/HW_43/HW_43.md
+++ b/HW_43/HW_43.md
@@ -13,7 +13,7 @@
 
 Проверить, что мониторинг работает, метрики собираются, графики рисуются 🤓
 
-# Хочу немного рассказать про VRM Bosch 00.0043
+# Хочу немного рассказать про VRM Bosch 03.0043
 # Одна из программ из комплекса CCTV Bosch
 # В кратце состоит из управляющего сервера - установка, настройка, администрирование идет через него.
 ![alt text](assets/vrm_7.png)
@@ -30,3 +30,10 @@
 5. Так выглядят логи
 ![alt text](assets/vrm_5.png)
 6. Выводит сведения о LUN в которые пишут камеры.
+![alt text](assets/vrm_6.png)
+7. А так выглядит свежая версия 04.31.0022, но не удобная, много информации, 
+наглядно не видно идет запись на конкретной камере или нет. Мало наглядности, 
+с первого взгляда проблему найти тяжело.
+![alt text](assets/vrm_9.png)
+
+
