--- a/HW_43/HW_43.md
+++ b/HW_43/HW_43.md
@@ -1,3 +1,9 @@
+# Platform     - {WSL}
+# Place        - {Work+Home}
+# Mood         - {Sad}
+# Undestanding - {5%}
+# In the seat  - {1 hour}
+
 Дедлайн: 19/08/2024
 
 Установить Zabbix Server & Zabbix Agent на одну и ту же или несколько VM при помощи следующих Ansible ролей:
@@ -13,7 +19,7 @@
 
 Проверить, что мониторинг работает, метрики собираются, графики рисуются 🤓
 
-# Хочу немного рассказать про VRM Bosch 03.0043
+# Хочу немного рассказать про VRM Bosch 03.00.0043
 # Одна из программ из комплекса CCTV Bosch
 # В кратце состоит из управляющего сервера - установка, настройка, администрирование идет через него.
 ![alt text](assets/vrm_7.png)
