--- a/HW_43/HW_43.md
+++ b/HW_43/HW_43.md
@@ -23,6 +23,7 @@
 # Одна из программ из комплекса CCTV Bosch
 # В кратце состоит из управляющего сервера - установка, настройка, администрирование идет через него.
 ![alt text](assets/vrm_7.png)
+# Просмотр live и архива из клиентской программы, устанавливается на рабочих местах.
 ![alt text](assets/vrm_8.png)
 # Сервер файловые хранилки, на которые пишут камеры.
 1. Устанавливается на файловый сервер. На сервере доступна по Localhost, удаленно по адресу сервера 192.168.42.244
