--- a/HW_43/HW_43.md
+++ b/HW_43/HW_43.md
@@ -43,4 +43,8 @@
 с первого взгляда проблему найти тяжело.
 ![alt text](assets/vrm_9.png)
 
+Это пример того, что не всегда стоит делать что-либо крутым и сложным.
+VRM усложнили, функционал остался тотже, но сложный и никому не нужный.
+Жаль, что фитбек отправить нельзя.
+
 
