--- a/HW_39/HW_39.md
+++ b/HW_39/HW_39.md
@@ -3,3 +3,9 @@
 # Mood         - {Ok-}
 # Undestanding - {-15%}
 # In the seat  - {4 hour}
+
+Дедлайн: 05/08/2024
+
+Прочитать статью
+[text](assets/K8s_fo_children_part1.webm)
+[text](assets/K8s_fo_children_part2.webm)
