--- a/HW_39/HW_39.md
+++ b/HW_39/HW_39.md
@@ -1,11 +1,11 @@
 # Platform     - {WSL}
 # Place        - {Work+Home}
 # Mood         - {Ok-}
-# Undestanding - {-15%}
-# In the seat  - {4 hour}
+# Undestanding - {25%}
+# In the seat  - {2 hour}
 
 Дедлайн: 05/08/2024
 
 Прочитать статью
-[text](assets/K8s_fo_children_part1.webm)
-[text](assets/K8s_fo_children_part2.webm)
+[Video part 1](assets/K8s_fo_children_part1.webm)
+[Video part 2](assets/K8s_fo_children_part2.webm)
