--- a/HW_39/HW_39.md
+++ b/HW_39/HW_39.md
@@ -1,5 +1,25 @@
 # Platform     - {WSL}
 # Place        - {Work+Home}
 # Mood         - {Ok-}
-# Undestanding - {-15%}
-# In the seat  - {4 hour}
+# Undestanding - {25%}
+# In the seat  - {2 hour}
+
+Дедлайн: 05/08/2024
+
+Прочитать статью https://www.cncf.io/phippy/the-childrens-illustrated-guide-to-kubernetes/
+
+
+[Video part 1](assets/K8s_fo_children_part1_s.gif)
+[Video part 2](assets/K8s_fo_children_part2_s.gif)
+
+# Пригодится
+# Преобразование видефайлов в *.gif формат, для просмотра в Git
+```bash
+sudo apt  install ffmpeg
+
+ffmpeg -i input.webm output.gif
+
+ffmpeg -i input.mp4 -vf "fps=10,scale=320:-1:flags=lanczos" -c:v gif output.gif # compress file
+
+
+```
