--- a/HW_43/HW_43.md
+++ b/HW_43/HW_43.md
@@ -22,9 +22,9 @@
 # Хочу немного рассказать про VRM Bosch 03.00.0043
 # Одна из программ из комплекса CCTV Bosch
 # В кратце состоит из управляющего сервера - установка, настройка, администрирование идет через него.
-![alt text](assets/vrm_7.png)
-# Просмотр live и архива из клиентской программы, устанавливается на рабочих местах.
 ![alt text](assets/vrm_8.png)
+# Просмотр live и архива из клиентской программы, устанавливается на рабочих местах.
+![alt text](assets/vrm_7.png)
 # Сервер файловые хранилки, на которые пишут камеры.
 1. Устанавливается на файловый сервер. На сервере доступна по Localhost, удаленно по адресу сервера 192.168.42.244
 ![alt text](assets/vrm_2.png)
@@ -42,5 +42,9 @@
 наглядно не видно идет запись на конкретной камере или нет. Мало наглядности, 
 с первого взгляда проблему найти тяжело.
 ![alt text](assets/vrm_9.png)
+
+Это пример того, что не всегда стоит делать что-либо крутым и сложным.
+VRM усложнили, функционал остался тотже, но сложный и никому не нужный.
+Жаль, что фитбек отправить нельзя.
 
 
