--- a/HW_43/HW_43.md
+++ b/HW_43/HW_43.md
@@ -47,4 +47,44 @@
 VRM усложнили, функционал остался тотже, но сложный и никому не нужный.
 Жаль, что фитбек отправить нельзя.
 
+Поехали
+Дабы не фиксить ошибку с версией Ansible, пробую установить нужную версию сразу.
+1. Create VM
+2. Connect to SSH
+3. Install Ansible
+```bash
+sudo apt remove ansible
+sudo apt --purge autoremove
 
+sudo apt update
+sudo apt upgrade
+
+sudo apt -y install software-properties-common
+sudo apt-add-repository ppa:ansible/ansible
+
+sudo apt install ansible
+```
+![alt text](assets/1-1.png)
+
+3. Copy playbook.yaml and run.yaml
+4. Run playbook
+```bash
+ansible-galaxy install -r run.yaml
+
+ansible-playbook -i localhost playbook.yaml
+
+```
+![alt text](assets/1-2.png)
+
+Установилось с ошибкой. Посмотрим.
+zabbix server работает
+![alt text](assets/1-3.png)
+zabbix server работает
+![alt text](assets/1-4.png)
+apache2 работает
+![alt text](assets/1-5.png)
+
+Но на url http://34.107.85.94/zabbix.example.com
+вылетает 404
+
+???
