--- a/HW_43/HW_43.md
+++ b/HW_43/HW_43.md
@@ -77,11 +77,11 @@ ansible-playbook -i localhost playbook.yaml
 ![alt text](assets/1-2.png)
 
 Установилось с ошибкой. Посмотрим.
-zabbix server работает
+# zabbix server работает
 ![alt text](assets/1-3.png)
-zabbix server работает
+# zabbix agent работает
 ![alt text](assets/1-4.png)
-apache2 работает
+# apache2 работает
 ![alt text](assets/1-5.png)
 
 Но на url http://34.107.85.94/zabbix.example.com
