--- a/HW_43/HW_43.md
+++ b/HW_43/HW_43.md
@@ -1,8 +1,8 @@
 # Platform     - {WSL}
 # Place        - {Work+Home}
 # Mood         - {Sad}
-# Undestanding - {5%}
-# In the seat  - {1 hour}
+# Undestanding - {15%}
+# In the seat  - {4 hour}
 
 Дедлайн: 19/08/2024
 
@@ -86,5 +86,8 @@ ansible-playbook -i localhost playbook.yaml
 
 Но на url http://34.107.85.94/zabbix.example.com
 вылетает 404
+потом 301
 
-???
+Ура заработало
+
+![alt text](assets/1-6.png)
